--- a/.env
+++ b/.env
@@ -1,36 +1,34 @@
+# Database settings
+POSTGRES_USER=taiga
+POSTGRES_PASSWORD=secure_db_password_change_this
 
-# Taiga's URLs - Variables to define where Taiga should be served
-TAIGA_SCHEME=http  # serve Taiga using "http" or "https" (secured) connection
-TAIGA_DOMAIN=localhost:9000  # Taiga's base URL
-SUBPATH="" # it'll be appended to the TAIGA_DOMAIN (use either "" or a "/subpath")
-WEBSOCKETS_SCHEME=ws  # events connection protocol (use either "ws" or "wss")
+# URLs settings - Using your droplet IP
+TAIGA_SCHEME=http
+TAIGA_DOMAIN=165.22.239.26:9000
+SUBPATH=""
+WEBSOCKETS_SCHEME=ws
 
-# Taiga's Secret Key - Variable to provide cryptographic signing
-SECRET_KEY="taiga-secret-key"  # Please, change it to an unpredictable value!!
+# Secret Key settings - CHANGE THIS TO A SECURE RANDOM STRING
+SECRET_KEY="your-very-secure-secret-key-change-this-now"
 
-# Taiga's Database settings - Variables to create the Taiga database and connect to it
-POSTGRES_USER=taiga  # user to connect to PostgreSQL
-POSTGRES_PASSWORD=taiga  # database user's password
+# Email Settings
+EMAIL_BACKEND=console
+EMAIL_HOST=smtp.host.example.com
+EMAIL_PORT=587
+EMAIL_HOST_USER=user
+EMAIL_HOST_PASSWORD=password
+EMAIL_DEFAULT_FROM=changeme@example.com
+EMAIL_USE_TLS=True
+EMAIL_USE_SSL=False
 
-# Taiga's SMTP settings - Variables to send Taiga's emails to the users
-EMAIL_BACKEND=console  # use an SMTP server or display the emails in the console (either "smtp" or "console")
-EMAIL_HOST=smtp.host.example.com  # SMTP server address
-EMAIL_PORT=587   # default SMTP port
-EMAIL_HOST_USER=user  # user to connect the SMTP server
-EMAIL_HOST_PASSWORD=password  # SMTP user's password
-EMAIL_DEFAULT_FROM=changeme@example.com  # default email address for the automated emails
-# EMAIL_USE_TLS/EMAIL_USE_SSL are mutually exclusive (only set one of those to True)
-EMAIL_USE_TLS=True  # use TLS (secure) connection with the SMTP server
-EMAIL_USE_SSL=False  # use implicit TLS (secure) connection with the SMTP server
+# Queue manager settings
+RABBITMQ_USER=taiga
+RABBITMQ_PASS=secure_rabbitmq_password_change_this
+RABBITMQ_VHOST=taiga
+RABBITMQ_ERLANG_COOKIE=secure-erlang-cookie-change-this
 
-# Taiga's RabbitMQ settings - Variables to leave messages for the realtime and asynchronous events
-RABBITMQ_USER=taiga  # user to connect to RabbitMQ
-RABBITMQ_PASS=taiga  # RabbitMQ user's password
-RABBITMQ_VHOST=taiga  # RabbitMQ container name
-RABBITMQ_ERLANG_COOKIE=secret-erlang-cookie  # unique value shared by any connected instance of RabbitMQ
+# Attachments settings
+ATTACHMENTS_MAX_AGE=360
 
-# Taiga's Attachments - Variable to define how long the attachments will be accesible
-ATTACHMENTS_MAX_AGE=360  # token expiration date (in seconds)
-
-# Taiga's Telemetry - Variable to enable or disable the anonymous telemetry
+# Telemetry Settings
 ENABLE_TELEMETRY=True
