--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ x-environment:
   # Rabbitmq settings
   RABBITMQ_USER: "${RABBITMQ_USER}"
   RABBITMQ_PASS: "${RABBITMQ_PASS}"
+  EVENTS_PUSH_BACKEND_URL: "amqp://taiga:taiga@taiga-events-rabbitmq:5672/taiga"
+  CELERY_BROKER_URL: "amqp://taiga:taiga@taiga-events-rabbitmq:5672/taiga"
   # Telemetry settings
   ENABLE_TELEMETRY: "${ENABLE_TELEMETRY}"
   # ...your customizations go here
@@ -65,8 +67,6 @@ services:
         condition: service_healthy
       taiga-events-rabbitmq:
         condition: service_started
-      taiga-async-rabbitmq:
-        condition: service_started
 
   taiga-async:
     image: taigaio/taiga-back:latest
@@ -80,21 +80,19 @@ services:
         condition: service_healthy
       taiga-events-rabbitmq:
         condition: service_started
-      taiga-async-rabbitmq:
-        condition: service_started
 
-  taiga-async-rabbitmq:
-    image: rabbitmq:3.8-management-alpine
-    environment:
-      RABBITMQ_ERLANG_COOKIE: "${RABBITMQ_ERLANG_COOKIE}"
-      RABBITMQ_DEFAULT_USER: "${RABBITMQ_USER}"
-      RABBITMQ_DEFAULT_PASS: "${RABBITMQ_PASS}"
-      RABBITMQ_DEFAULT_VHOST: "${RABBITMQ_VHOST}"
-    hostname: "taiga-async-rabbitmq"
-    volumes:
-      - taiga-async-rabbitmq-data:/var/lib/rabbitmq
-    networks:
-      - taiga
+  # taiga-async-rabbitmq:
+  #   image: rabbitmq:3.8-management-alpine
+  #   environment:
+  #     RABBITMQ_ERLANG_COOKIE: "${RABBITMQ_ERLANG_COOKIE}"
+  #     RABBITMQ_DEFAULT_USER: "${RABBITMQ_USER}"
+  #     RABBITMQ_DEFAULT_PASS: "${RABBITMQ_PASS}"
+  #     RABBITMQ_DEFAULT_VHOST: "${RABBITMQ_VHOST}"
+  #   hostname: "taiga-async-rabbitmq"
+  #   volumes:
+  #     - taiga-async-rabbitmq-data:/var/lib/rabbitmq
+  #   networks:
+  #     - taiga
 
   taiga-front:
     image: taigaio/taiga-front:latest
